no-hoist react-scripts

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "workspaces": {
     "packages": [
       "./packages/**/*"
+    ],
+    "nohoist": [
+      "react-scripts",
+      "react-scripts/**"
     ]
   },
   "scripts": {
