--- a/packages/js/plugins/ens-codegen/web3api.yaml
+++ b/packages/js/plugins/ens-codegen/web3api.yaml
@@ -1,18 +1,12 @@
 format: 0.0.1-prealpha.1
-description: Test Manifest
+description: ENS plugin
 repository: https://github.com
-mutation:
+query:
   schema:
-    file: ./src/mutation/schema.graphql
+    file: ./schema.graphql
   module:
     language: wasm/assemblyscript
     file: ./src/mutation/index.ts
-query:
-  schema:
-    file: ./src/query/schema.graphql
-  module:
-    language: wasm/assemblyscript
-    file: ./src/query/index.ts
 import_redirects:
   - uri: w3://ens/ethereum.web3api.eth
-    schema: ../../../../js/plugins/ethereum/schema.graphql
+    schema: ../ethereum/schema.graphql
