--- a/packages/js/plugins/ens-codegen/web3api.yaml
+++ b/packages/js/plugins/ens-codegen/web3api.yaml
@@ -6,7 +6,7 @@ query:
     file: ./schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./src/mutation/index.ts
+    file: ./index.ts
 import_redirects:
   - uri: w3://ens/ethereum.web3api.eth
     schema: ../ethereum/schema.graphql
