--- a/packages/apis/uniswapv2/package.json
+++ b/packages/apis/uniswapv2/package.json
@@ -12,17 +12,20 @@
     "test:env:down": "npx w3 test-env down"
   },
   "workspaces": {
-    "nohoist": ["assemblyscript", "assemblyscript/**"]
+    "nohoist": [
+      "assemblyscript",
+      "assemblyscript/**"
+    ]
   },
   "devDependencies": {
+    "@as-pect/cli": "5.0.1",
     "@uniswap/v2-core": "1.0.1",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@web3api/cli": "0.0.1-prealpha.8",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.8",
     "@web3api/wasm-as": "0.0.1-prealpha.8",
-    "ethers": "5.0.8",
-    "js-yaml": "3.14.0",
     "assemblyscript": "0.17.14",
-    "@as-pect/cli": "5.0.1"
+    "ethers": "5.0.8",
+    "js-yaml": "3.14.0"
   }
 }
