--- a/packages/apis/uniswapv2/tsconfig.json
+++ b/packages/apis/uniswapv2/tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "assemblyscript/std/assembly.json",
   "include": [
     "./src/**/*.ts"
-  ]
+  ],
+  "exclude": ["./src/__tests__/**/*.ts"]
 }
