--- a/packages/js/plugins/ethereum/package.json
+++ b/packages/js/plugins/ethereum/package.json
@@ -20,6 +20,8 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
+    "@ethersproject/address": "5.0.7",
+    "@ethersproject/providers": "5.0.7",
     "@web3api/core-js": "0.0.1-prealpha.13",
     "ethers": "5.0.7"
   },
