--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -22,11 +22,12 @@
   "dependencies": {
     "@web3api/core-js": "0.0.1-prealpha.18",
     "cids": "^1.1.4",
-    "ipfs-http-client-lite": "0.3.0",
+    "@dorgjelli-test/ipfs-http-client-lite": "0.3.1",
     "is-ipfs": "1.0.3"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "abort-controller": "3.0.0",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
