--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -20,9 +20,10 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/core-js": "0.0.1-prealpha.18",
-    "cids": "^1.1.4",
     "@dorgjelli-test/ipfs-http-client-lite": "0.3.1",
+    "@web3api/core-js": "0.0.1-prealpha.18",
+    "abort-controller": "3.0.0",
+    "cids": "^1.1.4",
     "is-ipfs": "1.0.3"
   },
   "devDependencies": {
