--- a/demos/ens/protocol/package.json
+++ b/demos/ens/protocol/package.json
@@ -5,14 +5,17 @@
   "version": "0.0.1-prealpha.15",
   "scripts": {
     "build": "npx w3 build",
-    "codegen": "npx w3 codegen",
-    "test:env:up": "npx w3 test-env up && node ./deploy-contracts",
-    "test:env:down": "npx w3 test-env down"
+    "test:env:up": "npx w3 test-env up",
+    "test:env:down": "npx w3 test-env down",
+    "deploy": "yarn deploy:contract && yarn deploy:web3api",
+    "deploy:web3api": "npx w3 build --ipfs http://localhost:5001 --test-ens ens.eth",
+    "deploy:contract": "node ./deploy-contracts.js",
+    "test": "npx w3 query ./recipes/e2e.json --redirects ./redirects.ts"
   },
   "devDependencies": {
-    "@web3api/cli": "0.0.1-prealpha.15",
-    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.15",
-    "@web3api/wasm-as": "0.0.1-prealpha.15",
+    "@web3api/cli": "0.0.1-prealpha.21",
+    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.21",
+    "@web3api/wasm-as": "0.0.1-prealpha.21",
     "ethers": "5.0.8",
     "js-yaml": "3.14.0"
   }
