added open domain script, need to merge prealpha-dev to get it to work

--- a/demos/ens/protocol/package.json
+++ b/demos/ens/protocol/package.json
@@ -17,6 +17,8 @@
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.21",
     "@web3api/wasm-as": "0.0.1-prealpha.21",
     "ethers": "5.0.8",
-    "js-yaml": "3.14.0"
+    "js-yaml": "3.14.0",
+    "dotenv": "8.2.0",
+    "ts-node": "9.1.1"
   }
 }
