Modular test-env config working with up and down commands

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "workspaces": {
     "packages": [
       "./packages/**/*"
-    ]
+    ],
+    "nohoist": ["./packages/testenv", "./packages/testenv/**/*", "./packages/testenv/**", "./packages/testenv/*", "@web3api/ipfs-service"]
   },
   "scripts": {
     "reset": "yarn clean && yarn && yarn build",
