--- a/packages/apis/uniswapv2/package.json
+++ b/packages/apis/uniswapv2/package.json
@@ -5,12 +5,13 @@
   "version": "0.0.1",
   "scripts": {
     "build": "npx w3 build",
-    "test:e2e": " TS_NODE_PROJECT='./tsconfig.json' hardhat test",
+    "test:e2e": "TEST=true jest --passWithNoTests --runInBand --verbose",
     "test:unit": "asp --verbose",
     "test": "yarn run test:unit",
     "test:ci": "TEST=TRUE yarn run test:unit",
     "test:env:up": "npx w3 test-env up",
-    "test:env:down": "npx w3 test-env down"
+    "test:env:down": "npx w3 test-env down",
+    "deploy": "npx w3 build --ipfs https://rinkeby.infura.io/v3/d119148113c047ca90f0311ed729c466 --test-ens uniswapv2.eth"
   },
   "workspaces": {
     "nohoist": [
@@ -38,6 +39,10 @@
     "rimraf": "3.0.2",
     "ts-node": "8.10.2",
     "@as-pect/cli": "^6.0.0",
-    "ethers": "^5.1.3"
+    "ethers": "^5.1.3",
+    "@types/jest": "26.0.8",
+    "jest": "26.6.3",
+    "ts-jest": "26.5.4",
+    "typescript": "4.0.7"
   }
 }
