fixed client instantiation to get rinkeby queries working

--- a/packages/apis/uniswapv2/package.json
+++ b/packages/apis/uniswapv2/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "scripts": {
     "build": "npx w3 build",
-    "test:e2e": "TEST=true jest --passWithNoTests --runInBand --verbose",
+    "test:e2e": "jest --passWithNoTests --runInBand --verbose",
     "test:unit": "asp --verbose",
     "test": "yarn run test:unit",
     "test:ci": "TEST=TRUE yarn run test:unit",
@@ -28,11 +28,11 @@
     "@types/node-fetch": "^2.5.10",
     "@uniswap/v2-core": "1.0.1",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
-    "@web3api/cli": "0.0.1-prealpha.20",
-    "@web3api/client-js": "0.0.1-prealpha.20",
-    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.20",
-    "@web3api/test-env-js": "0.0.1-prealpha.20",
-    "@web3api/wasm-as": "0.0.1-prealpha.20",
+    "@web3api/cli": "0.0.1-prealpha.21",
+    "@web3api/client-js": "0.0.1-prealpha.21",
+    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.21",
+    "@web3api/test-env-js": "0.0.1-prealpha.21",
+    "@web3api/wasm-as": "0.0.1-prealpha.21",
     "assemblyscript": "0.17.14",
     "js-yaml": "3.14.0",
     "node-fetch": "2.6.1",
