remove needless TEST=true

--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -15,7 +15,7 @@
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext 'src/**/*.{ts|tsx}'",
     "test:ci": "yarn test",
-    "test": "TEST=true jest --passWithNoTests --runInBand --verbose --env=./src/__tests__/env/index.ts",
+    "test": "jest --passWithNoTests --runInBand --verbose --env=./src/__tests__/env/index.ts",
     "test:watch": "yarn test --watch",
     "pretest": "yarn install:web3api",
     "install:web3api": "npx web3api-worker-install ./"
