--- a/packages/apis/uniswapv2/package.json
+++ b/packages/apis/uniswapv2/package.json
@@ -10,8 +10,7 @@
     "test": "yarn run test:unit",
     "test:ci": "TEST=TRUE yarn run test:unit",
     "test:env:up": "npx w3 test-env up",
-    "test:env:down": "npx w3 test-env down",
-    "deploy": "npx w3 build --ipfs https://rinkeby.infura.io/v3/d119148113c047ca90f0311ed729c466 --test-ens uniswapv2.eth"
+    "test:env:down": "npx w3 test-env down"
   },
   "workspaces": {
     "nohoist": [
@@ -20,7 +19,8 @@
     ]
   },
   "dependencies": {
-    "as-bigint": "^0.2.3"
+    "as-bigint": "^0.2.4",
+    "as-bigfloat": "^0.0.1"
   },
   "devDependencies": {
     "@uniswap/sdk": "^3.0.3",
