--- a/packages/apis/uniswapv2/package.json
+++ b/packages/apis/uniswapv2/package.json
@@ -7,7 +7,7 @@
     "build": "npx w3 build",
     "test:e2e": "jest --passWithNoTests --runInBand --verbose",
     "test:unit": "asp --verbose",
-    "test": "yarn run test:unit",
+    "test": "yarn test:unit && yarn test:e2e",
     "test:ci": "TEST=TRUE yarn run test:unit",
     "test:env:up": "npx w3 test-env up",
     "test:env:down": "npx w3 test-env down"
