[WIP] Show Env Vars

--- a/demos/ens/protocol/web3api.env.yaml
+++ b/demos/ens/protocol/web3api.env.yaml
@@ -1,6 +1,8 @@
 version: '3'
 modules:
   ipfs:
-    module: "@web3api/ipfs-service"
+    module: "@namestys/ipfs-service"
+    version: "0.0.1"
   devserver:
-    module: "@web3api/devserver"
+    module: "@namestys/devserver"
+    version: "0.0.2"
