--- a/packages/apis/uniswapv2/package.json
+++ b/packages/apis/uniswapv2/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "deploy": "w3 build --ipfs http://127.0.0.1:5001 --test-end uniswap.v2.eth",
+    "deploy": "w3 build --ipfs http://127.0.0.1:5001 --test-ens uniswap.v2.eth",
     "build": "npx w3 build",
     "test:e2e": "jest --passWithNoTests --runInBand --verbose",
     "test:unit": "asp --verbose",
@@ -20,14 +20,16 @@
     ]
   },
   "dependencies": {
+    "as-bigfloat": "^0.0.4",
     "as-bigint": "^0.2.4",
-    "as-bigfloat": "^0.0.4"
+    "assemblyscript-json": "^1.0.0"
   },
   "devDependencies": {
-    "axios": "0.21.1",
-    "@uniswap/sdk": "^3.0.3",
+    "@as-pect/cli": "^6.0.0",
+    "@types/jest": "26.0.8",
     "@types/node": "12.6.9",
     "@types/node-fetch": "^2.5.10",
+    "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-core": "1.0.1",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@web3api/cli": "0.0.1-prealpha.21",
@@ -36,15 +38,15 @@
     "@web3api/test-env-js": "0.0.1-prealpha.21",
     "@web3api/wasm-as": "0.0.1-prealpha.21",
     "assemblyscript": "0.17.14",
+    "axios": "0.21.1",
+    "erc-20-abi": "^1.0.0",
+    "ethers": "^5.1.3",
+    "jest": "26.6.3",
     "js-yaml": "3.14.0",
     "node-fetch": "2.6.1",
     "rimraf": "3.0.2",
-    "ts-node": "8.10.2",
-    "@as-pect/cli": "^6.0.0",
-    "ethers": "^5.1.3",
-    "@types/jest": "26.0.8",
-    "jest": "26.6.3",
     "ts-jest": "26.5.4",
+    "ts-node": "8.10.2",
     "typescript": "4.0.7"
   }
 }
