--- a/packages/js/tracing/package.json
+++ b/packages/js/tracing/package.json
@@ -18,19 +18,6 @@
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
-  "devDependencies": {
-    "@types/jest": "26.0.8",
-    "jest": "26.2.2",
-    "json-schema-to-typescript": "10.1.3",
-    "rimraf": "3.0.2",
-    "ts-jest": "26.1.4",
-    "ts-node": "8.10.2",
-    "typescript": "3.9.7"
-  },
-  "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
-  "publishConfig": {
-    "access": "public"
-  },
   "dependencies": {
     "@opentelemetry/api": "^1.0.0-rc.0",
     "@opentelemetry/core": "^0.18.0",
@@ -41,6 +28,21 @@
     "@opentelemetry/node": "^0.18.0",
     "@opentelemetry/propagator-b3": "^0.18.0",
     "@opentelemetry/tracing": "^0.18.0",
-    "@opentelemetry/web": "^0.18.0"
+    "@opentelemetry/web": "^0.18.0",
+    "uuid": "8.3.2"
+  },
+  "devDependencies": {
+    "@types/jest": "26.0.8",
+    "@types/uuid": "3.4.3",
+    "jest": "26.2.2",
+    "json-schema-to-typescript": "10.1.3",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.1.4",
+    "ts-node": "8.10.2",
+    "typescript": "3.9.7"
+  },
+  "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
+  "publishConfig": {
+    "access": "public"
   }
 }
