Update web3api yaml

--- a/packages/apis/uniswapv2/web3api.yaml
+++ b/packages/apis/uniswapv2/web3api.yaml
@@ -13,3 +13,6 @@ query:
   module:
     language: wasm/assemblyscript
     file: ./src/query/index.ts
+import_redirects:
+  - uri: w3://ens/ethereum.web3api.eth
+    schema: ../../js/plugins/ethereum/schema.graphql
