--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -31,7 +31,7 @@
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.21",
     "@web3api/logger-plugin-js": "0.0.1-prealpha.21",
     "@web3api/schema-parse": "0.0.1-prealpha.21",
-    "@web3api/tracing": "0.0.1-prealpha.21",
+    "@web3api/tracing-js": "0.0.1-prealpha.21",
     "graphql": "15.5.0",
     "js-yaml": "3.14.0",
     "web-worker": "1.0.0"
