--- a/packages/js/tracing/package.json
+++ b/packages/js/tracing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3api/tracing",
+  "name": "@web3api/tracing-js",
   "description": "Web3API Core Tracing",
   "version": "0.0.1-prealpha.21",
   "license": "MIT",
