--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -20,7 +20,7 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/manifest-schema": "0.0.1-prealpha.21",
+    "@web3api/manifest-schemas": "0.0.1-prealpha.21",
     "@web3api/tracing": "0.0.1-prealpha.21",
     "graphql": "15.5.0",
     "graphql-tag": "2.10.4",
