os writeFileSync + fix Node typings

--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -16,7 +16,7 @@
     "web3api-worker-install": "bin/web3api-worker-install"
   },
   "scripts": {
-    "build": "rimraf ./build && tsc --project tsconfig.build.json && npx webpack --config webpack.config.js",
+    "build": "rimraf ./build && tsc --project tsconfig.build.json && npx webpack-cli --config webpack.config.js",
     "prebuild": "ts-node ./scripts/extractPluginConfigs.ts",
     "lint": "eslint --color --ext .ts src/",
     "test": "TEST=true jest --passWithNoTests --runInBand --verbose",
@@ -43,6 +43,7 @@
     "@web3api/cli": "0.0.1-prealpha.21",
     "@web3api/test-cases": "0.0.1-prealpha.21",
     "@web3api/test-env-js": "0.0.1-prealpha.21",
+    "@web3api/os-js": "0.0.1-prealpha.21",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
