--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -19,9 +19,9 @@
     "build": "rimraf ./build && tsc --project tsconfig.build.json && npx webpack-cli --config webpack.config.js",
     "prebuild": "ts-node ./scripts/extractPluginConfigs.ts",
     "lint": "eslint --color --ext .ts src/",
-    "test": "TEST=true jest --passWithNoTests --runInBand --verbose",
-    "test:ci": "TEST=true jest --passWithNoTests --runInBand --verbose",
-    "test:watch": "TEST=true jest --watch --passWithNoTests --verbose"
+    "test": "cross-env TEST=true jest --passWithNoTests --runInBand --verbose",
+    "test:ci": "cross-env TEST=true jest --passWithNoTests --runInBand --verbose",
+    "test:watch": "cross-env TEST=true jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
     "@msgpack/msgpack": "2.3.0",
@@ -44,6 +44,7 @@
     "@web3api/test-cases": "0.0.1-prealpha.21",
     "@web3api/test-env-js": "0.0.1-prealpha.21",
     "@web3api/os-js": "0.0.1-prealpha.21",
+    "cross-env": "7.0.3",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
