--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -3,8 +3,8 @@ name: JS-CI
 on: [push, pull_request]
 
 jobs:
-  CI-Linux:
-    name: JS-CI
+  JS-CI-Linux:
+    name: JS-CI-Linux
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -42,8 +42,8 @@ jobs:
       - name: Test
         run: yarn test:ci
 
-  CI-Mac:
-    name: JS-CI
+  JS-CI-Mac:
+    name: JS-CI-Mac
     runs-on: macos-latest
     timeout-minutes: 20
     steps:
@@ -81,8 +81,8 @@ jobs:
       - name: Test
         run: yarn test:ci
 
-  CI-Windows:
-    name: JS-CI
+  JS-CI-Windows:
+    name: JS-CI-Windows
     runs-on: windows-latest
     timeout-minutes: 20
     steps:
@@ -90,7 +90,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Read .nvmrc
-        run: ::set-output name=NVMRC::type .nvmrc
+        run: type .nvmrc | ::set-output name=NVMRC::
         id: nvm
 
       - name: Setup Node.js
