--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Read .nvmrc
-        run: iex "echo ::set-output name=NVMRC::$(type .nvmrc)"
+        run: iex "echo '::set-output name=NVMRC::$(type .nvmrc)'"
         id: nvm
 
       - name: Setup Node.js
