--- a/packages/apis/uniswapv2/package.json
+++ b/packages/apis/uniswapv2/package.json
@@ -20,8 +20,7 @@
     ]
   },
   "dependencies": {
-    "as-bigfloat": "^0.0.4",
-    "as-bigint": "^0.2.4"
+    "as-bigfloat": "^0.0.4"
   },
   "devDependencies": {
     "@as-pect/cli": "^6.0.0",
