--- a/packages/apis/uniswapv2/web3api.yaml
+++ b/packages/apis/uniswapv2/web3api.yaml
@@ -16,3 +16,5 @@ query:
 import_redirects:
   - uri: w3://ens/ethereum.web3api.eth
     schema: ../../js/plugins/ethereum/schema.graphql
+  - uri: w3://ens/sha3.web3api.eth
+    schema: ../../../node_modules/@web3api/sha3-plugin-js/schema.graphql
