--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -30,7 +30,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
-        if: steps.cache-deps.outputs.cache-hit != 'true'
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install --nonInteractive --frozen-lockfile
 
       - name: Lint
