check if build passes when using new cache again

--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '${{ steps.nvm.outputs.NVMRC }}'
 
-      - name: Check for cached node_modules
+      - name: Check for cached node_modules 2
         uses: actions/cache@v2
         with:
           path: '**/node_modules'
