--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -22,11 +22,13 @@ jobs:
 
       - name: Check for cached node_modules 2
         uses: actions/cache@v2
+        id: yarn-cache
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install --nonInteractive --frozen-lockfile
 
       - name: Lint
