testing if yarn --prefer-offline impacts package installation speed

--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn install --nonInteractive --frozen-lockfile --prefer-offline
+        run: yarn install --nonInteractive --frozen-lockfile
 
       - name: Lint
         run: yarn run lint:ci
