--- a/packages/js/plugins/ethereum/package.json
+++ b/packages/js/plugins/ethereum/package.json
@@ -15,9 +15,9 @@
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
-    "test": "jest --passWithNoTests --runInBand --verbose --detectOpenHandles",
-    "test:ci": "jest --passWithNoTests --runInBand --verbos --detectOpenHandlese",
-    "test:watch": "jest --watch --passWithNoTests --verbose --detectOpenHandles"
+    "test": "TEST_PLUGIN=true jest --passWithNoTests --runInBand --verbose --detectOpenHandles",
+    "test:ci": "TEST_PLUGIN=true jest --passWithNoTests --runInBand --verbos --detectOpenHandlese",
+    "test:watch": "TEST_PLUGIN=true jest --watch --passWithNoTests --verbose --detectOpenHandles"
   },
   "dependencies": {
     "@ethersproject/address": "5.0.7",
@@ -26,6 +26,8 @@
     "ethers": "5.0.7"
   },
   "devDependencies": {
+    "@web3api/test-env-js": "0.0.1-prealpha.22",
+    "@web3api/client-js": "0.0.1-prealpha.22",
     "@types/jest": "26.0.8",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
@@ -33,8 +35,7 @@
     "ts-node": "8.10.2",
     "typescript": "4.0.7",
     "ganache-core": "2.13.2",
-    "eth-ens-namehash": "2.0.8",
-    "@web3api/client-js": "0.0.1-prealpha.22"
+    "eth-ens-namehash": "2.0.8"
   },
   "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
   "publishConfig": {
