--- a/packages/core-apis/api-resolver/package.json
+++ b/packages/core-apis/api-resolver/package.json
@@ -9,7 +9,7 @@
     "test:env:up": "npx w3 test-env up",
     "test:env:down": "npx w3 test-env down",
     "deploy": "yarn deploy:web3api",
-    "deploy:web3api": "npx w3 build --ipfs http://localhost:5001 --test-ens simplestorage.eth"
+    "deploy:web3api": "npx w3 build --ipfs http://localhost:5001"
   },
   "devDependencies": {
     "@web3api/cli": "0.0.1-prealpha.24",
