--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ install:
 build: off
 
 test_script:
-  # - ps: "& 'C:/Program Files/Docker/Docker/DockerCli.exe' -SwitchDaemon -SwitchLinuxEngine"
+  - ps: "& 'C:/Program Files/Docker/Docker/DockerCli.exe' -SwitchDaemon -SwitchLinuxEngine"
   - choco install nodejs-lts --version=14.16.0
   - npm i -g yarn
   - yarn install --nonInteractive --frozen-lockfile
