--- a/packages/core-apis/api-resolver/web3api.yaml
+++ b/packages/core-apis/api-resolver/web3api.yaml
@@ -4,4 +4,4 @@ repository: https://github.com/web3-api/monorepo
 interface: true
 query:
   schema:
-    file: ./query.graphql
+    file: ./src/query.graphql
