--- a/packages/js/plugins/ethereum/package.json
+++ b/packages/js/plugins/ethereum/package.json
@@ -15,9 +15,9 @@
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
-    "test": "jest --passWithNoTests --runInBand --verbose --detectOpenHandles",
-    "test:ci": "jest --passWithNoTests --runInBand --verbose --detectOpenHandles",
-    "test:watch": "jest --watch --passWithNoTests --verbose --detectOpenHandles"
+    "test": "jest --passWithNoTests --runInBand --verbose",
+    "test:ci": "jest --passWithNoTests --runInBand --verbose",
+    "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
     "@ethersproject/address": "5.0.7",
