--- a/packages/core-interfaces/logger/web3api.yaml
+++ b/packages/core-interfaces/logger/web3api.yaml
@@ -1,7 +1,7 @@
-description: Web3API Logger Standard
+description: Web3API Logger Interface
 format: 0.0.1-prealpha.1
 repository: https://github.com/web3-api/monorepo
-abstract: true
+interface: true
 query:
   schema:
-    file: ./query.graphql
+    file: ./src/query.graphql
