--- a/packages/core-interfaces/logger/package.json
+++ b/packages/core-interfaces/logger/package.json
@@ -2,7 +2,7 @@
   "name": "logger-interface",
   "description": "Web3API Logger Interface",
   "private": true,
-  "version": "0.0.1-prealpha.24",
+  "version": "0.0.1-prealpha.25",
   "scripts": {
     "build": "yarn build:web3api",
     "build:web3api": "npx w3 build",
@@ -12,7 +12,6 @@
     "deploy:web3api": "npx w3 build --ipfs http://localhost:5001"
   },
   "devDependencies": {
-    "@web3api/cli": "0.0.1-prealpha.24",
-    "js-yaml": "3.14.0"
+    "@web3api/cli": "0.0.1-prealpha.25"
   }
 }
