--- a/packages/js/plugins/ethereum/package.json
+++ b/packages/js/plugins/ethereum/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/jest": "26.0.8",
     "@web3api/client-js": "0.0.1-prealpha.25",
+    "@web3api/ens-plugin-js": "0.0.1-prealpha.25",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.25",
     "@web3api/test-env-js": "0.0.1-prealpha.25",
     "eth-ens-namehash": "2.0.8",
