--- a/packages/apis/uniswapv2/web3api.yaml
+++ b/packages/apis/uniswapv2/web3api.yaml
@@ -1,18 +1,14 @@
-description: UniswapV2 Web3API
 repository: https://github.com/web3-api/monorepo/packages/apis/uniswapv2
-format: 0.0.1-prealpha.1
-mutation:
-  schema:
-    file: ./src/mutation/schema.graphql
-  module:
-    language: wasm/assemblyscript
-    file: ./src/mutation/index.ts
-query:
-  schema:
-    file: ./src/query/schema.graphql
-  module:
-    language: wasm/assemblyscript
-    file: ./src/query/index.ts
+format: 0.0.1-prealpha.2
+language: wasm/assemblyscript
+build: ./web3api.build.yaml
+modules:
+  mutation:
+    schema: ./src/mutation/schema.graphql
+    module: ./src/mutation/index.ts
+  query:
+    schema: ./src/query/schema.graphql
+    module: ./src/query/index.ts
 import_redirects:
   - uri: w3://ens/sha3.web3api.eth
     schema: ../../../node_modules/@web3api/sha3-plugin-js/schema.graphql
