--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.3.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "graphql": "15.5.0",
+    "@graphql-eslint/eslint-plugin": "1.0.1"
   }
 }
