--- a/packages/apis/uniswapv2/tsconfig.json
+++ b/packages/apis/uniswapv2/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "build"
   },
   "include": [
-    "./src/**/*.ts",
+    "./src/**/*.ts"
   ],
   "exclude": [
     "./src/__tests__/e2e/**/*.ts"
