Tests running but URI is coming empty

--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -16,10 +16,10 @@
     "web3api-worker-install": "bin/web3api-worker-install"
   },
   "scripts": {
-    "build": "rimraf ./build && tsc --project tsconfig.build.json && npx webpack-cli --config webpack.config.js",
+    "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "prebuild": "ts-node ./scripts/extractPluginConfigs.ts",
     "lint": "eslint --color --ext .ts src/",
-    "test": "cross-env TEST=true jest --passWithNoTests --runInBand --verbose",
+    "test": "cross-env TEST=true jest --passWithNoTests --runInBand --verbose=true",
     "test:ci": "cross-env TEST=true jest --passWithNoTests --runInBand --verbose",
     "test:watch": "cross-env TEST=true jest --watch --passWithNoTests --verbose"
   },
