--- a/packages/apis/console/package.json
+++ b/packages/apis/console/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@web3api/cli": "0.0.1-prealpha.25",
-    "@web3api/wasm-as": "0.0.1-prealpha.25",
+    "@namestys/wasm-as": "0.0.1-prealpha.36",
     "assemblyscript": "0.19.1",
     "js-yaml": "3.14.0"
   }
