--- a/packages/js/plugins/ethereum/package.json
+++ b/packages/js/plugins/ethereum/package.json
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
+    "prebuild": "npx w3 plugin codegen",
     "lint": "eslint --color --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
