--- a/packages/js/plugins/graph-node/package.json
+++ b/packages/js/plugins/graph-node/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@web3api/core-js": "0.0.1-prealpha.30",
+    "@web3api/http-plugin-js": "0.0.1-prealpha.30",
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
     "cross-fetch": "3.0.5",
