remove thread.js + worker install script

--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -17,8 +17,7 @@
     "test:ci": "yarn test",
     "test": "jest --passWithNoTests --runInBand --verbose --env=./src/__tests__/env/index.ts",
     "test:watch": "yarn test --watch",
-    "pretest": "yarn install:web3api",
-    "install:web3api": "npx web3api-worker-install ./"
+    "pretest": "yarn install:web3api"
   },
   "dependencies": {
     "@web3api/client-js": "0.0.1-prealpha.25",
