--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -9,8 +9,7 @@
   },
   "main": "build/index.js",
   "files": [
-    "build",
-    "bin"
+    "build"
   ],
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
@@ -32,8 +31,7 @@
     "@web3api/tracing-js": "0.0.1-prealpha.30",
     "@web3api/uts46-plugin-js": "0.0.1-prealpha.30",
     "graphql": "15.5.0",
-    "js-yaml": "3.14.0",
-    "web-worker": "1.0.0"
+    "js-yaml": "3.14.0"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
@@ -50,10 +48,7 @@
     "ts-loader": "8.0.17",
     "ts-morph": "10.0.1",
     "ts-node": "8.10.2",
-    "typescript": "4.0.7",
-    "webpack": "4.44.2",
-    "webpack-cli": "4.5.0",
-    "worker-plugin": "5.0.0"
+    "typescript": "4.0.7"
   },
   "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
   "publishConfig": {
