--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@msgpack/msgpack": "2.3.0",
+    "@web3api/asyncify-js": "0.0.1-prealpha.30",
     "@web3api/core-js": "0.0.1-prealpha.30",
     "@web3api/ens-plugin-js": "0.0.1-prealpha.30",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.30",
