--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "reset": "yarn clean && yarn && yarn build",
     "clean": "npx rimraf ./**/node_modules ./**/build ./**/coverage ./**/.w3",
     "build": "lerna run build --no-private --ignore @web3api/cli* --ignore @web3api/react && lerna run build --scope @web3api/client-js --scope @web3api/react && lerna run build --scope @web3api/cli",
-    "lint": "lerna run lint",
+    "lint": "lerna run lint --ignore @web3api/*-js && lerna run lint --scope @web3api/*-js",
     "lint:fix": "lerna run lint -- --fix",
-    "lint:ci": "lerna run lint",
+    "lint:ci": "yarn lint",
     "test": "lerna run test --no-private --ignore @web3api/client-js && lerna run test --scope @web3api/client-js",
     "test:ci": "lerna run test:ci --no-private --ignore @web3api/client-js && lerna run test:ci --scope @web3api/client-js",
     "version:apply": "npx lerna version $(cat VERSION) --exact --no-git-tag-version --yes",
