--- a/packages/js/plugins/uts46/package.json
+++ b/packages/js/plugins/uts46/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "rimraf build && tsc --project tsconfig.build.json",
-    "lint": "eslint --color --ext .ts src/",
+    "lint": "eslint --color --ext .ts --ignore-pattern **/*.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
